--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -9,6 +9,14 @@ name: Deploy to Firebase Hosting on merge
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    env:
+      REACT_APP_APIKEY: ${{ secrets.REACT_APP_APIKEY }}
+      REACT_APP_AUTHDOMAIN: ${{ secrets.REACT_APP_AUTHDOMAIN }}
+      REACT_APP_PROJECTID: ${{ secrets.REACT_APP_PROJECTID }}
+      REACT_APP_STORAGEBUCKET: ${{ secrets.REACT_APP_STORAGEBUCKET }}
+      REACT_APP_MESSAGINGSENDERID: ${{ secrets.REACT_APP_MESSAGINGSENDERID }}
+      REACT_APP_APPID: ${{ secrets.REACT_APP_APPID }}
+
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
@@ -18,3 +26,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AUTH_FBS }}'
           channelId: live
           projectId: auth-fbs
+
+
